Tue Jun 30 17:45:01 UTC 2009  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/Definitions.h:
        * dds/DCPS/GuidConverter.h:
        * dds/DCPS/GuidConverter.cpp:
        * dds/DCPS/Service_Participant.h:
        * dds/DCPS/Service_Participant.cpp:

          Fixed for Solaris/x86 with GCC 3.3.2; now using DDS_HAS_WCHAR because
          this platform does indded have ACE_HAS_WCHAR even though its C++ std
          library is incomplete.

Mon Jun 29 21:36:37 UTC 2009  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/GuidConverter.h:
        * dds/DCPS/GuidConverter.cpp:
        * dds/DCPS/Service_Participant.h:
        * dds/DCPS/Service_Participant.cpp:

          Fixes for platforms without ACE_HAS_WCHAR.  Current support platforms
          with this problem are GCC 3.3.2 on Solaris/x86 and GCC 3.3.5 on QNX.
          The C++ standard library that comes with these compilers is lacking
          std::wstring, std::wostream, etc.

Mon Jun 29 20:38:49 UTC 2009  Adam Mitz  <mitza@ociweb.com>

        * docs/INSTALL:

          Added a note on how to run tests for a static build.

        * tests/DCPS/FooTest3_0/PubDriver.cpp:
        * tests/DCPS/FooTest3_0/SubDriver.cpp:
        * tests/DCPS/FooTest3_1/PubDriver.cpp:
        * tests/DCPS/FooTest3_1/SubDriver.cpp:
        * tests/DCPS/FooTest3_2/PubDriver.cpp:
        * tests/DCPS/FooTest3_2/SubDriver.cpp:
        * tests/transport/dds_comparative/PubDriver.cpp:
        * tests/transport/dds_comparative/SubDriver.cpp:
        * tests/transport/mcast_simple/PubDriver.cpp:
        * tests/transport/mcast_simple/SubDriver.cpp:
        * tests/transport/mcast_simple_n/PubDriver.cpp:
        * tests/transport/mcast_simple_n/SubDriver.cpp:
        * tests/transport/simple/PubDriver.cpp:
        * tests/transport/simple/SubDriver.cpp:
        * tests/transport/simple_bp/PubDriver.cpp:
        * tests/transport/simple_bp/SubDriver.cpp:
        * tests/transport/simple_bp_rm/PubDriver.cpp: